--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minitask 3 | Latihan Form</title>
 </head>
-<body>
 
+<body>
+    <form>
+        <label for="fullname">Siapa nama anda?</label>
+        <input type="text" id="fullname" name="fullname">
+        <label for="age">Berapa umur anda?</label>
+        <input type="number" id="age" name="age">
+        <label for="gender">Apa jenis kelamin anda?</label>
+        <input type="radio" id="laki-laki" name="gender">
+        <label for="laki-laki">Laki-laki</label>
+        <input type="radio" id="perempuan" name="gender">
+        <label for="perempuan">Perempuan</label>
+        <label>Jika anda perokok, rokok apa yang anda pernah coba?</label>
+        <input type="checkbox" id="gudang" name="rokok">
+        <label for="">Gudang Garam Filter</label>
+        <input type="checkbox" id="lucky" name="rokok">
+        <label for="">Lucky Strike</label>
+        <input type="checkbox" id="marlboro" name="rokok">
+        <label for="">Marlboro</label>
+        <input type="checkbox" id="esse" name="rokok">
+        <label for="">Esse</label>
+    </form>
 </body>
+
 </html>
