Update: layouting to match with UI design given

--- a/index.html
+++ b/index.html
@@ -9,24 +9,44 @@
 
 <body>
     <form>
-        <label for="fullname">Siapa nama anda?</label>
+        <div>
+            <label for="fullname">Siapa nama anda?</label>
+        </div>
         <input type="text" id="fullname" name="fullname">
-        <label for="age">Berapa umur anda?</label>
-        <input type="number" id="age" name="age">
-        <label for="gender">Apa jenis kelamin anda?</label>
-        <input type="radio" id="laki-laki" name="gender">
-        <label for="laki-laki">Laki-laki</label>
-        <input type="radio" id="perempuan" name="gender">
-        <label for="perempuan">Perempuan</label>
-        <label>Jika anda perokok, rokok apa yang anda pernah coba?</label>
-        <input type="checkbox" id="gudang" name="rokok">
-        <label for="">Gudang Garam Filter</label>
-        <input type="checkbox" id="lucky" name="rokok">
-        <label for="">Lucky Strike</label>
-        <input type="checkbox" id="marlboro" name="rokok">
-        <label for="">Marlboro</label>
-        <input type="checkbox" id="esse" name="rokok">
-        <label for="">Esse</label>
+        <div>
+            <label for="age">Berapa umur anda?</label>
+        </div>
+        <div>
+            <input type="number" id="age" name="age">
+        </div>
+        <div>
+            <label for="gender">Apa jenis kelamin anda?</label>
+        </div>
+        <div>
+            <input type="radio" id="laki-laki" name="gender">
+            <label for="laki-laki">Laki-laki</label>
+            <input type="radio" id="perempuan" name="gender">
+            <label for="perempuan">Perempuan</label>
+        </div>
+        <div>
+            <label>Jika anda perokok, rokok apa yang anda pernah coba?</label>
+        </div>
+        <div>
+            <input type="checkbox" id="gudang" name="rokok">
+            <label for="">Gudang Garam Filter</label>
+        </div>
+        <div>
+            <input type="checkbox" id="lucky" name="rokok">
+            <label for="">Lucky Strike</label>
+        </div>
+        <div>
+            <input type="checkbox" id="marlboro" name="rokok">
+            <label for="">Marlboro</label>
+        </div>
+        <div>
+            <input type="checkbox" id="esse" name="rokok">
+            <label for="">Esse</label>
+        </div>
     </form>
 </body>
 
