Update: add missing radio button to ask do you smoke

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             <label for="perempuan">Perempuan</label>
         </div>
         <div>
+            <label for="gender">Apa anda perokok?</label>
+        </div>
+        <div>
+            <input type="radio" id="ya" name="do-u-smoke-n">
+            <label for="ya">Ya</label>
+            <input type="radio" id="tidak" name="do-u-smoke-n">
+            <label for="tidak">Tidak</label>
+        </div>
+        <div>
             <label>Jika anda perokok, rokok apa yang anda pernah coba?</label>
         </div>
         <div>
