Feat: add submit button and reset button

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <input type="checkbox" id="esse" name="rokok">
             <label for="">Esse</label>
         </div>
+        <div>
+            <button type="submit">Kirim!</button>
+            <button type="reset">Reset!</button>
+        </div>
     </form>
 </body>
 
