Update: add table and create it's structure

--- a/survey-result.html
+++ b/survey-result.html
@@ -8,7 +8,20 @@
 </head>
 
 <body>
-
+    <h1>Survey Result</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Nama Lengkap</th>
+                <th>umur</th>
+                <th>Jenis kelamin</th>
+                <th>Perokok Aktif?</th>
+                <th>Merk Rokok yang pernah dicoba</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </body>
 
 </html>
