--- a/survey-result.html
+++ b/survey-result.html
@@ -20,6 +20,41 @@
             </tr>
         </thead>
         <tbody>
+                        <tr>
+                <td>Mas Hilal</td>
+                <td>70</td>
+                <td>Laki-Laki</td>
+                <td>Tidak</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mas Vincent</td>
+                <td>72</td>
+                <td>Laki-Laki</td>
+                <td>Ya</td>
+                <td>[Lucky Strike, Esse]</td>
+            </tr>
+            <tr>
+                <td>Mas Arif</td>
+                <td>40</td>
+                <td>Laki-Laki</td>
+                <td>Tidak</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Reza</td>
+                <td>19</td>
+                <td>Laki-Laki</td>
+                <td>Tidak</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mas azka</td>
+                <td>40</td>
+                <td>Laki-Laki</td>
+                <td>Tidak</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
