--- a/survey-result.html
+++ b/survey-result.html
@@ -20,7 +20,7 @@
             </tr>
         </thead>
         <tbody>
-                        <tr>
+            <tr>
                 <td>Mas Hilal</td>
                 <td>70</td>
                 <td>Laki-Laki</td>
@@ -54,6 +54,41 @@
                 <td>Laki-Laki</td>
                 <td>Tidak</td>
                 <td></td>
+            </tr>
+            <tr>
+                <td>Bang Wildan</td>
+                <td>19</td>
+                <td>Laki-Laki</td>
+                <td>Ya</td>
+                <td>[Gudang Garam Filter, Marlboro]</td>
+            </tr>
+            <tr>
+                <td>Masse Anton</td>
+                <td>22</td>
+                <td>Laki-Laki</td>
+                <td>Ya</td>
+                <td>[Lucky Strike, Marlboro]</td>
+            </tr>
+            <tr>
+                <td>Leader Aditya</td>
+                <td>40</td>
+                <td>Laki-Laki</td>
+                <td>Ya</td>
+                <td>[Gudang Garam Filter, Lucky Strike, Marlboro, Esse]</td>
+            </tr>
+            <tr>
+                <td>Mas Jaka</td>
+                <td>25</td>
+                <td>Laki-Laki</td>
+                <td>Tidak</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mas Best Mentor Irul</td>
+                <td>22</td>
+                <td>Laki-Laki</td>
+                <td>Ya</td>
+                <td>[Marlboro, Esse]</td>
             </tr>
         </tbody>
     </table>
