Update: add anchor link to navigate to survey-result pages

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <button type="reset">Reset!</button>
         </div>
     </form>
+    <a href="/survey-result.html">ke halaman hasil survey</a>
 </body>
 
 </html>
