--- a/survey-result.html
+++ b/survey-result.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Survey Result</h1>
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Nama Lengkap</th>
